--- a/config.env
+++ b/config.env
@@ -1,5 +1,5 @@
 # REQUIRED CONFIG
-BOT_TOKEN = "6074072140:AAEz1NuXR_PP8bqxhuVdxW7PzTF3ZJJxXNc"
+BOT_TOKEN = "5780720450:AAEPHLTgVHr-NQQa1VSRg9yWQ2Ue7tiD6AQ"
 OWNER_ID = "1989750989"
 TELEGRAM_API = "9016072"
 TELEGRAM_HASH = "7102a41623c9bc2feaff6c8455680c42"
@@ -10,7 +10,7 @@ DOWNLOAD_DIR = "/usr/src/app/downloads"
 STATUS_UPDATE_INTERVAL = "20"                       
 AUTO_DELETE_MESSAGE_DURATION = "60"       
 AUTO_DELETE_UPLOAD_MESSAGE_DURATION = "-1" 
-DATABASE_URL = "mongodb+srv://RF999:RF999@cluster0.uaznbh4.mongodb.net/?retryWrites=true&w=majority"
+DATABASE_URL = "mongodb+srv://Client999:Client999@cluster0.irx7qdw.mongodb.net/?retryWrites=true&w=majority"
 AUTHORIZED_CHATS = "-100998840659"
 SUDO_USERS = ""
 IGNORE_PENDING_REQUESTS = ""
