--- a/config.env
+++ b/config.env
@@ -11,7 +11,7 @@ STATUS_UPDATE_INTERVAL = "20"
 AUTO_DELETE_MESSAGE_DURATION = "60"       
 AUTO_DELETE_UPLOAD_MESSAGE_DURATION = "-1" 
 DATABASE_URL = "mongodb+srv://Client999:Client999@cluster0.irx7qdw.mongodb.net/?retryWrites=true&w=majority"
-AUTHORIZED_CHATS = "-100998840659"
+AUTHORIZED_CHATS = "-939484543"
 SUDO_USERS = ""
 IGNORE_PENDING_REQUESTS = ""
 IS_TEAM_DRIVE = ""
@@ -39,7 +39,7 @@ MEDIAINFO_ENABLED = "true"                                # Default is False (on
 SET_BOT_COMMANDS = "true" 
 
 # UPDATE
-UPSTREAM_REPO = "https://Selvan0/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@github.com/Selvan0/Weeb-HMF"
+UPSTREAM_REPO = "https://Selvan0/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@github.com/Selvan0/KK-LinkZ-Leech"
 UPSTREAM_BRANCH = "master"
 UPDATE_PACKAGES = "true"
 
@@ -48,14 +48,14 @@ BOT_PM = "true"                                           # If this True/False a
 FORCE_BOT_PM = ""                                     # If this True then NO User can Enable/Disable BOT_PM by using Usetting 
 
 # LEECH
-LEECH_LOG = "-1001839451607"                                        # Must be Started with -100xxxxxxx
-LEECH_LOG_URL = "https://t.me/+KxSqTy-RI11jMjY1"                                    # Use Invite link for PUBLIC/PRIVATE Leech log 
+LEECH_LOG = ""                                        # Must be Started with -100xxxxxxx
+LEECH_LOG_URL = ""                                    # Use Invite link for PUBLIC/PRIVATE Leech log 
 LEECH_LOG_INDEXING = ""                               # Default is False make it True if you want leech file indexing in leech log channel
 
 # MIRROR
 ENABLE_USR_TD = ""                                    # If this TRUE then User can create its own TD Category
-MIRROR_LOGS = "-1001839451607"                                      # Must be Started with -100xxxxxxx
-MIRROR_LOG_URL = "https://t.me/+KxSqTy-RI11jMjY1"                                   # Use Invite link for PUBLIC/PRIVATE Mirror log 
+MIRROR_LOGS = ""                                      # Must be Started with -100xxxxxxx
+MIRROR_LOG_URL = ""                                   # Use Invite link for PUBLIC/PRIVATE Mirror log 
 LINK_LOGS = ""                                        # Must be Started with -100xxxxxxx
 
 # OTHERS UTILS
@@ -66,10 +66,10 @@ PAID_SERVICE = ""                                     # Default is False
 TIMEZONE = "Asia/Kolkata"                             # Checkout for Different timezone list https://bit.ly/2JtQfVI
 
 # TELEGRAPH UI (graph.org)
-TITLE_NAME = "| HMF | Leech | Grp |"
-AUTHOR_NAME = "Thiru | HMF | 🇬🇷 |"
-AUTHOR_URL = "telegram.me/HMF_Owner_1"
-GD_INFO = "HMF x MLB GRP"
+TITLE_NAME = ""
+AUTHOR_NAME = ""
+AUTHOR_URL = ""
+GD_INFO = ""
 
 # MULTI FORCE SUBSCRIBE
 FSUB_IDS = ""                                         # Each id Should be seperated by Space & ID must be started with -100xxxxxxx
