--- a/config.env
+++ b/config.env
@@ -10,7 +10,7 @@ DOWNLOAD_DIR = "/usr/src/app/downloads"
 STATUS_UPDATE_INTERVAL = "20"                       
 AUTO_DELETE_MESSAGE_DURATION = "60"       
 AUTO_DELETE_UPLOAD_MESSAGE_DURATION = "-1" 
-DATABASE_URL = "mongodb+srv://Dolphin: Dolphin999@cluster0.gsuyn.mongodb.net/?retryWrites=true&w=majority"
+DATABASE_URL = "mongodb+srv://Bave999:Bave999@cluster0.1aheaa1.mongodb.net/?retryWrites=true&w=majority"
 AUTHORIZED_CHATS = "-939484543"
 SUDO_USERS = ""
 IGNORE_PENDING_REQUESTS = ""
