--- a/config.env
+++ b/config.env
@@ -5,7 +5,7 @@ TELEGRAM_API = "9016072"
 TELEGRAM_HASH = "7102a41623c9bc2feaff6c8455680c42"
 
 # OPTIONAL CONFIG
-GDRIVE_ID = ""
+GDRIVE_ID = "0AN8iKlbhzAKqUk9PVA"
 DOWNLOAD_DIR = "/usr/src/app/downloads"
 STATUS_UPDATE_INTERVAL = "20"                       
 AUTO_DELETE_MESSAGE_DURATION = "60"       
@@ -14,10 +14,10 @@ DATABASE_URL = "mongodb+srv://Bave999:Bave999@cluster0.1aheaa1.mongodb.net/?retr
 AUTHORIZED_CHATS = "-939484543"
 SUDO_USERS = ""
 IGNORE_PENDING_REQUESTS = ""
-IS_TEAM_DRIVE = ""
+IS_TEAM_DRIVE = "true"
 USE_SERVICE_ACCOUNTS = "true"
 SA_MAIL = ""                                          # SA Email id To display in USER TD Section
-INDEX_URL = ""                                        # Not end with /
+INDEX_URL = "https://kk.hmf.workers.dev/0:"                                        # Not end with /
 STATUS_LIMIT = "3"                                    # Recommended Value : 2 (If Using PICS)
 STOP_DUPLICATE = ""
 CMD_SUFFIX = ""
